--- a/scratch.Rmd
+++ b/scratch.Rmd
@@ -42,7 +42,7 @@ pop = 3390000
 # beta, gamma)
 rproc <- Csnippet(stringr::str_interp("
   double beta, br, seas, foi, dw, births;
-  double rate[8], trans[8];
+  double rate[6], trans[6];
   double birthrate = $[d]{birthrate};
   double pop = $[d]{pop};
 
@@ -68,35 +68,30 @@ rproc <- Csnippet(stringr::str_interp("
 
   rate[0] = foi*dw/dt;  // stochastic force of infection
   rate[1] = mu;             // natural S death
-  rate[2] = sigma;        // rate of ending of latent stage
-  rate[3] = mu;             // natural E death
-  rate[4] = gamma;        // rate of entering immune amnesia
-  rate[5] = mu;             // natural I death
-  rate[6] = phi;             // recovery
-  rate[7] = mu;             // natural A death
+  rate[2] = gamma;        // rate of entering immune amnesia
+  rate[3] = mu;             // natural I death
+  rate[4] = phi;             // recovery
+  rate[5] = mu;             // natural A death
 
   // Poisson births
   births = rpois(br*dt);
 
   // transitions between classes
   reulermultinom(2,S,&rate[0],dt,&trans[0]);
-  reulermultinom(2,E,&rate[2],dt,&trans[2]);
-  reulermultinom(2,I,&rate[4],dt,&trans[4]);
-  reulermultinom(2,A,&rate[6],dt,&trans[6]);
+  reulermultinom(2,I,&rate[2],dt,&trans[2]);
+  reulermultinom(2,A,&rate[4],dt,&trans[4]);
 
   S += births   - trans[0] - trans[1];
-  E += trans[0] - trans[2] - trans[3];
-  I += trans[2] - trans[4] - trans[5];
-  A += trans[4] - trans[6] - trans[7];
-  R = pop - S - E - I - A;
+  I += trans[0] - trans[2] - trans[3];
+  A += trans[2] - trans[4] - trans[5];
+  R = pop - S - I - A;
   W += (dw - dt)/sigmaSE;  // standardized i.i.d. white noise
-  C += trans[4];           // true incidence
+  C += trans[2];           // true incidence
 "))
 initlz <- Csnippet(stringr::str_interp("
   double pop = $[d]{pop};
-  double m = pop/(S_0+E_0+I_0+A_0+R_0);
+  double m = pop/(S_0+I_0+A_0+R_0);
   S = nearbyint(m*S_0);
-  E = nearbyint(m*E_0);
   I = nearbyint(m*I_0);
   A = nearbyint(m*A_0);
   R = nearbyint(m*R_0);
@@ -124,10 +119,10 @@ rmeas <- Csnippet("
     cases = 0.0;
   }
 ")
-times <- seq(from=1979, to=1995, by=1/52)
+times <- seq(from=1979, to=1995, by=1/365.25)
 paramnames <- c("R0","mu","sigma","gamma","phi","alpha","iota",
                          "rho","sigmaSE","psi","cohort","amplitude",
-                         "S_0","E_0","I_0","A_0","R_0")
+                         "S_0","I_0","A_0","R_0")
 sir <- pomp(data = NULL, times = times, t0 = 2*times[1]-times[2],
             rprocess=euler(rproc,delta.t=1/365.25),
             rinit=initlz,
@@ -135,7 +130,7 @@ sir <- pomp(data = NULL, times = times, t0 = 2*times[1]-times[2],
             rmeasure=rmeas,
             obsnames = "cases",
             accumvars=c("C","W"),
-            statenames=c("S","E","I","A","R","C","W"),
+            statenames=c("S","I","A","R","C","W"),
             paramnames=paramnames)
 # I estimate phi as 1 / (duration of proposed amnesia) = 1/(2 years) = 1/2. Mina
 # et al. Science 2016 (https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4823017/)
