--- a/scratch.Rmd
+++ b/scratch.Rmd
@@ -197,41 +197,66 @@ obs = sims %>%
   summarise_all(sum) %>%
   filter(n_sim > 1) # throw out periods that don't span full obs_period_len
 
-# Compute rolling windows of measles incidence and non-measles mortality to
-# estimate immunomodulated and non-measles mortality populations.
-roll_S_I_len_yrs = 4 * obs_period_len
-roll_A_D_len_yrs = 2 * obs_period_len
-roll_S_I_len_obs = floor(roll_S_I_len_yrs/obs_period_len)
-roll_A_D_len_obs = floor(roll_A_D_len_yrs/obs_period_len)
-inc_mort = obs %>% group_by(.id) %>%
-  group_modify(~ .x %>%
-                 transmute(roll_S_I = c(rep(NA, roll_S_I_len_obs-1),
-                                        rollsum(.x %>% select(S_I),
-                                                roll_S_I_len_obs)),
-                           # this indexing ensures period in which mortality is
-                           # counted doesn't overlap with period in which past
-                           # incidence enters counted immunomodulated population
-                           roll_A_D = c(rollsum(.x %>% select(A_D),
-                                                roll_A_D_len_obs)[-1],
-                                        rep(NA, roll_A_D_len_obs)),
-                           S_I_s = end_obs_period - roll_S_I_len_yrs,
-                           S_I_e = end_obs_period,
-                           A_D_s = end_obs_period,
-                           A_D_e = end_obs_period + roll_A_D_len_yrs
-                           )) %>%
-  filter(row_number() %% roll_A_D_len_obs == 0) %>% # mortality window
-  na.omit()
+compute_inc_mort_r2s = function(obs, roll_S_I_len_yrs, roll_A_D_len_yrs) {
+  # Compute rolling windows of measles incidence and non-measles mortality to
+  # estimate immunomodulated and non-measles mortality populations.
+  roll_S_I_len_obs = floor(roll_S_I_len_yrs/obs_period_len)
+  roll_A_D_len_obs = floor(roll_A_D_len_yrs/obs_period_len)
+  inc_mort = obs %>% group_by(.id) %>%
+    group_modify(~ .x %>%
+                   transmute(mz_immunomodulated = c(rep(NA, roll_S_I_len_obs-1),
+                                          rollsum(.x %>% select(S_I),
+                                                  roll_S_I_len_obs)),
+                             # this indexing ensures period in which mortality is
+                             # counted doesn't overlap with period in which past
+                             # incidence enters immunomodulated population; one
+                             # can allow overlap by shifting rollsum up or down
+                             # (c(rollsum[-1], NA...) -> c(rollsum, 1 fewer NA) ->
+                             # c(rollsum[-2], 1 more NA...) and correspondingly
+                             # updating A_D_s and A_D_e
+                             non_mz_mort = c(rollsum(.x %>% select(A_D),
+                                                  roll_A_D_len_obs)[-1],
+                                          rep(NA, roll_A_D_len_obs)),
+                             S_I_s = end_obs_period - roll_S_I_len_yrs,
+                             S_I_e = end_obs_period,
+                             A_D_s = end_obs_period,
+                             A_D_e = end_obs_period + roll_A_D_len_yrs,
+                             )) %>%
+    filter(row_number() %% roll_A_D_len_obs == 0) %>% # mortality window
+    na.omit()
+  # Compute r^2s between immunomodulated and non-measles mortality populations.
+  r2s = inc_mort %>%
+    group_by(.id) %>%
+    group_map(~ cor(.x$mz_immunomodulated, .x$non_mz_mort)^2) %>% unlist()
+  return(list(inc_mort=inc_mort, r2s=r2s))
+}
 
-# Compute r^2s between immunomodulated and non-measles mortality populations.
-r2s = inc_mort %>%
-  group_by(.id) %>%
-  group_map(~ cor(.x$roll_S_I, .x$roll_A_D)^2) %>% unlist()
+roll_S_I_lens_yrs = 1:16 * obs_period_len
+roll_A_D_len_yrs = 4 * obs_period_len
+inc_mort_r2s = purrr::map(roll_S_I_lens_yrs, function(roll_S_I_len_yrs) {
+  compute_inc_mort_r2s(obs, roll_S_I_len_yrs, roll_A_D_len_yrs)
+}) %>% setNames(roll_S_I_lens_yrs)
 
 # Scatter plot immunomodulated and non-measles mortality populations.
-inc_mort %>% ggplot(aes(x=roll_S_I, y=roll_A_D)) +
-  geom_point(size=0.01) +
+inc_mort_r2s[[12]]$inc_mort %>% ggplot(aes(x=mz_immunomodulated, y=non_mz_mort)) +
+  geom_point(size=0.1) +
   facet_wrap(~.id,ncol=3, labeller = as_labeller(function(id) {
-    paste0("simulation ", id, ", r^2=", signif(r2s[as.integer(id)], 2)) })) +
-  xlab(paste0(signif(roll_S_I_len_yrs, 2), "-yr mz incidence")) +
+    paste0("simulation ", id, ", r^2=",
+           signif(inc_mort_r2s[[12]]$r2s[as.integer(id)], 2)) })) +
+  xlab(paste0(signif(roll_S_I_lens_yrs[12], 2), "-yr mz incidence")) +
   ylab(paste0("following ", signif(roll_A_D_len_yrs, 2), "-yr non-mz mortality"))
+```
+
+```{r}
+# Plot mz incidence-non mz mortality correlations vs. time periods covering
+# immunomodulated populations.
+r2s = bind_rows(inc_mort_r2s %>% purrr::map('r2s')) %>%
+  tidyr::gather(key = "roll_S_I_len_yrs", value = "r2") %>%
+  mutate(roll_S_I_len_yrs = as.numeric(roll_S_I_len_yrs))
+r2_medians = r2s %>% group_by(roll_S_I_len_yrs) %>%
+  summarise(r2 = median(r2))
+
+ggplot(mapping = aes(x=roll_S_I_len_yrs, y=r2)) +
+  geom_point(data=r2s, size=0.01) +
+  geom_line(data=r2_medians)
 ```
