--- a/scratch.Rmd
+++ b/scratch.Rmd
@@ -154,16 +154,15 @@ sir <- pomp(data = NULL, times = times, t0 = 2*times[1]-times[2],
 # quote from the Nature article: "The disease [measles] is associated with a
 # transient immune suppression and increased risk of childhood morbidity and
 # mortality for a period of more than 2 years."
-mu = 0.02
 # These are estimated for London in He, Ionides, & King, J. R. Soc. Interface
 # (2010).
 mle = c(loglik=-3804.9,
         loglik.sd=0.16,
-        mu=mu,
+        mu=0.04,
         delay=4,
         sigma=28.9,
         gamma=30.4,
-        phi=5*mu,
+        phi=0.002,
         rho=0.488,
         R0=56.8,
         amplitude=0.554,
@@ -197,10 +196,11 @@ sir %>%
            # change nsim back to 20
            nsim=10,format="data.frame", seed = 96) -> sims1
 sir %>%
-  simulate(params=theta %>% replace('mu', 0.1),
+  simulate(params=theta %>% replace(c('mu', 'phi'), c(0.1, 0.1)),
            nsim=10,format="data.frame", seed = 96) -> sims2
 # Name simulations here.
-sims = bind_rows(`mu=0.02`=sims1, `mu=0.1`=sims2, .id = 'simulation_params')
+sims = bind_rows(`mu=0.04,phi=0.002`=sims1, `mu=0.1,phi=0.1`=sims2,
+                 .id = 'simulation_params')
 sims %>%
   ggplot(aes(x=time,y=cases))+
   geom_line()+
