add: model coinfection compartments explicitly

--- a/scratch.Rmd
+++ b/scratch.Rmd
@@ -43,7 +43,7 @@ pop = 3390000
 # beta, gamma)
 rproc <- Csnippet(stringr::str_interp("
   double beta, br, seas, foi, dw, births;
-  double rate[6], trans[6];
+  double rate[18], trans[18];
   double birthrate = $[d]{birthrate};
   double pop = $[d]{pop};
 
@@ -68,11 +68,23 @@ rproc <- Csnippet(stringr::str_interp("
   dw = rgammawn(sigmaSE,dt);
 
   rate[0] = foi*dw/dt;  // stochastic force of infection
-  rate[1] = mu;             // natural S death
+  rate[1] = beta_i;             // infection of S w/ non-mz
   rate[2] = gamma;        // rate of entering immune amnesia
-  rate[3] = 100 * mu;             // natural I death
+  rate[3] = beta_i;             // coinfection of I w/ non-mz
   rate[4] = phi;             // recovery
-  rate[5] = 10 * mu;             // natural A death
+  rate[5] = beta_i;             // coinfection of A w/ non-mz
+  rate[6] = beta_i;             // infection of R w/ non-mz
+  rate[7] = r;             // recovery from non-mz infection S_i -> S
+  rate[8] = foi*dw/dt;  // stochastic force of infection
+  rate[9] = mu;             // S death from non-mz
+  rate[10] = r;             // recovery from non-mz infection I_i -> I
+  rate[11] = gamma;  // rate of entering immune amnesia
+  rate[12] = 100 * mu;             // I death from mz + non-mz co-infection
+  rate[13] = r;            // recovery from non-mz infection A_i -> A
+  rate[14] = phi;             // recovery from measles
+  rate[15] = 10 * mu;           // A death from mz amnesia + non-mz co-infection
+  rate[16] = r;             // recovery from non-mz infection R_i -> R
+  rate[17] = mu;             // R death from non-mz
 
   // Poisson births
   births = rpois(br*dt);
@@ -81,19 +93,27 @@ rproc <- Csnippet(stringr::str_interp("
   reulermultinom(2,S,&rate[0],dt,&trans[0]);
   reulermultinom(2,I,&rate[2],dt,&trans[2]);
   reulermultinom(2,A,&rate[4],dt,&trans[4]);
+  reulermultinom(1,R,&rate[6],dt,&trans[6]);
+  reulermultinom(3,S_i,&rate[7],dt,&trans[7]);
+  reulermultinom(3,I_i,&rate[10],dt,&trans[10]);
+  reulermultinom(3,A_i,&rate[13],dt,&trans[13]);
+  reulermultinom(2,R_i,&rate[16],dt,&trans[16]);
 
-  S += births   - trans[0] - trans[1];
-  I += trans[0] - trans[2] - trans[3];
-  A += trans[2] - trans[4] - trans[5];
-  S_I += trans[0];
-  S_D += trans[1];
-  I_A += trans[2];
-  I_D += trans[3];
-  A_R += trans[4];
-  A_D += trans[5];
-  R = pop - S - I - A;
+  // A way to debug these update eqns: ensure each trans[i] (besides birth and
+  // death) is counted twice, once positively and once negatively. An outflow(-)
+  // from one compartment must be matched by an inflow(+) to another.
+  S += births   - trans[0] - trans[1] + trans[7];
+  I += trans[0] - trans[2] - trans[3] + trans[10];
+  A += trans[2] - trans[4] - trans[5] + trans[13];
+  R += trans[4] - trans[6] + trans[16];
+  S_i += trans[1] - trans[7] - trans[8] - trans[9];
+  I_i += trans[3] + trans[8] - trans[10] - trans[11] - trans[12];
+  A_i += trans[5] + trans[11] - trans[13] - trans[14] - trans[15];
+  R_i += trans[6] + trans[14] - trans[16] - trans[17];
+  S_I += trans[0] + trans[8];  // for tracking immunomodulated population
+  nonmz_D += trans[9] + trans[15] + trans[17];
   W += (dw - dt)/sigmaSE;  // standardized i.i.d. white noise
-  C += trans[2];           // true incidence
+  C += trans[2] + trans[11];           // true incidence
 "))
 initlz <- Csnippet(stringr::str_interp("
   double pop = $[d]{pop};
@@ -102,7 +122,8 @@ initlz <- Csnippet(stringr::str_interp("
   I = nearbyint(m*I_0);
   A = nearbyint(m*A_0);
   R = nearbyint(m*R_0);
-  S_I = S_D = I_A = I_D = A_R = A_D = 0;
+  S_i = I_i = A_i = R_i = 0;
+  S_I = nonmz_D = 0;
   W = 0;
   C = 0;
 "))
@@ -130,17 +151,18 @@ rmeas <- Csnippet("
 sim_dt = 1/365.25
 times <- seq(from=1979, to=1995, by=sim_dt)
 paramnames <- c("R0","mu","sigma","gamma","phi","alpha","iota",
-                         "rho","sigmaSE","psi","cohort","amplitude",
-                         "S_0","I_0","A_0","R_0")
+                "rho","sigmaSE","psi","cohort","amplitude",
+                "S_0","I_0","A_0","R_0",
+                "beta_i","r")
 sir <- pomp(data = NULL, times = times, t0 = 2*times[1]-times[2],
             rprocess=euler(rproc,delta.t=sim_dt),
             rinit=initlz,
             dmeasure=dmeas,
             rmeasure=rmeas,
             obsnames = "cases",
-            accumvars=c("C","W","S_I","S_D","I_A","I_D","A_R","A_D"),
-            statenames=c("S","I","A","R","C","W","S_I","S_D","I_A","I_D","A_R",
-                         "A_D"),
+            accumvars=c("C","W","S_I","nonmz_D"),
+            statenames=c("S","I","A","R","C","W","S_I",
+                         "nonmz_D","S_i","I_i","A_i","R_i"),
             paramnames=paramnames)
 # I estimate phi as 1 / (duration of proposed amnesia) = 1/(2 years) = 1/2. Mina
 # et al. Science 2016 (https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4823017/)
@@ -158,11 +180,12 @@ sir <- pomp(data = NULL, times = times, t0 = 2*times[1]-times[2],
 # (2010).
 mle = c(loglik=-3804.9,
         loglik.sd=0.16,
-        mu=0.04,
+        mu=5/100000., # based on Fig 1 in
+                      # https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4823017
         delay=4,
         sigma=28.9,
         gamma=30.4,
-        phi=0.002,
+        phi=0.1, #TODO: try different values
         rho=0.488,
         R0=56.8,
         amplitude=0.554,
@@ -175,7 +198,9 @@ mle = c(loglik=-3804.9,
         I_0=5.14e-05,
         A_0=5e-05,
         R_0=0.97,
-        sigmaSE=0.0878
+        sigmaSE=0.0878,
+        beta_i=52, # once per week
+        r=26 # once per 2 weeks
 )
 mle[paramnames] -> theta
 ```
@@ -189,17 +214,20 @@ mle[paramnames] -> theta
 # (range, 7–21 days)." Then 1/gamma is about 1/52 of a year, or gamma=52.
 # beta = gamma * R_0 = 52 * 15 = 780.
 # https://www.cdc.gov/vaccines/pubs/pinkbook/downloads/meas.pdf
+# Brazil simulation
 sir %>%
   # simulate(params=c(Beta=1.5,gamma=1,rho=0.9,N=2600),
   simulate(params=theta,
            # can make N adj w/ time
            # change nsim back to 20
            nsim=10,format="data.frame", seed = 96) -> sims1
+# US/UK simulation: has lower rates of infection and lower rate of
+# leaving amnesia
 sir %>%
-  simulate(params=theta %>% replace(c('mu', 'phi'), c(0.1, 0.1)),
+  simulate(params=theta %>% replace(c('beta_i', 'phi'), c(13, 0.01)),
            nsim=10,format="data.frame", seed = 96) -> sims2
 # Name simulations here.
-sims = bind_rows(`mu=0.04,phi=0.002`=sims1, `mu=0.1,phi=0.1`=sims2,
+sims = bind_rows(`beta_i=52,phi=0.1`=sims1, `beta_i=13,phi=0.1`=sims2,
                  .id = 'simulation_params')
 sims %>%
   ggplot(aes(x=time,y=cases))+
@@ -222,11 +250,11 @@ obs = sims %>%
   summarise_all(sum) %>%
   filter(n_sim > 1) # throw out periods that don't span full obs_period_len
 
-compute_inc_mort_r2s = function(obs, roll_S_I_len_yrs, roll_A_D_len_yrs) {
+compute_inc_mort_r2s = function(obs, roll_S_I_len_yrs, roll_nonmz_D_len_yrs) {
   # Compute rolling windows of measles incidence and non-measles mortality to
   # estimate immunomodulated and non-measles mortality populations.
   roll_S_I_len_obs = floor(roll_S_I_len_yrs/obs_period_len)
-  roll_A_D_len_obs = floor(roll_A_D_len_yrs/obs_period_len)
+  roll_nonmz_D_len_obs = floor(roll_nonmz_D_len_yrs/obs_period_len)
   inc_mort = obs %>% group_by(simulation_params, .id) %>%
     group_modify(~ .x %>%
                    transmute(mz_immunomodulated = c(rep(NA, roll_S_I_len_obs-1),
@@ -238,16 +266,16 @@ compute_inc_mort_r2s = function(obs, roll_S_I_len_yrs, roll_A_D_len_yrs) {
                              # can allow overlap by shifting rollsum up or down
                              # (c(rollsum[-1], NA...) -> c(rollsum, 1 fewer NA) ->
                              # c(rollsum[-2], 1 more NA...) and correspondingly
-                             # updating A_D_s and A_D_e
-                             non_mz_mort = c(rollsum(.x %>% select(A_D),
-                                                  roll_A_D_len_obs)[-1],
-                                          rep(NA, roll_A_D_len_obs)),
+                             # updating nonmz_D_s and nonmz_D_e
+                             non_mz_mort = c(rollsum(.x %>% select(nonmz_D),
+                                                  roll_nonmz_D_len_obs)[-1],
+                                          rep(NA, roll_nonmz_D_len_obs)),
                              S_I_s = end_obs_period - roll_S_I_len_yrs,
                              S_I_e = end_obs_period,
-                             A_D_s = end_obs_period,
-                             A_D_e = end_obs_period + roll_A_D_len_yrs,
+                             nonmz_D_s = end_obs_period,
+                             nonmz_D_e = end_obs_period + roll_nonmz_D_len_yrs,
                              )) %>%
-    filter(row_number() %% roll_A_D_len_obs == 0) %>% # mortality window
+    filter(row_number() %% roll_nonmz_D_len_obs == 0) %>% # mortality window
     na.omit()
   # Compute r^2s between immunomodulated and non-measles mortality populations.
   r2s = inc_mort %>%
@@ -257,9 +285,9 @@ compute_inc_mort_r2s = function(obs, roll_S_I_len_yrs, roll_A_D_len_yrs) {
 }
 
 roll_S_I_lens_yrs = 1:16 * obs_period_len
-roll_A_D_len_yrs = 1 * obs_period_len
+roll_nonmz_D_len_yrs = 1 * obs_period_len
 inc_mort_r2s = purrr::map(roll_S_I_lens_yrs, function(roll_S_I_len_yrs) {
-  compute_inc_mort_r2s(obs, roll_S_I_len_yrs, roll_A_D_len_yrs)
+  compute_inc_mort_r2s(obs, roll_S_I_len_yrs, roll_nonmz_D_len_yrs)
 }) %>% setNames(roll_S_I_lens_yrs)
 
 # Scatter plot immunomodulated and non-measles mortality populations.
@@ -268,7 +296,7 @@ inc_mort_r2s[[12]]$inc_mort %>% ggplot(aes(x=mz_immunomodulated/1000.,
   geom_point(size=0.1) +
   facet_wrap(~simulation_params+.id) +
   xlab(paste0(signif(roll_S_I_lens_yrs[12], 2), "-yr mz incidence (1000s)")) +
-  ylab(paste0("following ", signif(roll_A_D_len_yrs, 2),
+  ylab(paste0("following ", signif(roll_nonmz_D_len_yrs, 2),
               "-yr non-mz mortality (1000s)"))
 ```
 
